Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-38367

Crash in QGIFFormat::fillRect

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • None
    • 4.8.5
    • Image formats
    • None
    • Fedora 20

    Description

      e.g.

      Thread 3 (Thread 0x7f2518ab6700 (LWP 2015)):
      [KCrash Handler]
      #6 QGIFFormat::fillRect (this=this@entry=0x7f25141f0440, image=image@entry=0x7f2514562158, col=col@entry=0, row=row@entry=0, w=41590, h=<optimized out>, color=16777215) at ../../../gui/image/qgifhandler.cpp:933
      #7 0x00007f251b69ae0e in QGIFFormat::decode (this=0x7f25141f0440, image=image@entry=0x7f2514562158, buffer=0x7f25145fdec5 "e;zw4\304\333z\026\005\257\233\220\061\352Nz\212\254\361as\235\300\364\003\265$\304Sx\031d\v\201\327\326\251\272\204\340\205<\363\363f\255;\222\325\210\002\343q\003\004\201\324\364\065\\F\020\225\353\263\333\266*\321/]\212/\205\037+nZ\256\345x\004`\217J\260}\212\262;2r\a\r\351\332\232\321\357 \257\a\276*\226\203[X\257\062\003\205\373\314\307\070\365\244\021\355\003\344\311\a\030\247{\"\032\263\"\223#", length=852, nextFrameDelay=nextFrameDelay@entry=0x7f2514562170, loopCount=loopCount@entry=0x7f2514562174) at ../../../gui/image/qgifhandler.cpp:393
      #8 0x00007f251b69ba75 in QGifHandler::read (this=0x7f2514562130, image=0x7f2518ab3710) at ../../../gui/image/qgifhandler.cpp:1114
      #9 0x00007f2540b4fab4 in QImageReader::read (this=this@entry=0x7f2518ab3760, image=image@entry=0x7f2518ab3710) at image/qimagereader.cpp:1205
      #10 0x00007f2540b50034 in QImageReader::read (this=this@entry=0x7f2518ab3760) at image/qimagereader.cpp:1155
      #11 0x00007f2540b43c04 in QImage::load (this=this@entry=0x7f2518ab38b0, fileName=..., format=format@entry=0x0) at image/qimage.cpp:5094
      #12 0x00007f2540b43cf6 in QImage::QImage (this=0x7f2518ab38b0, fileName=..., format=0x0) at image/qimage.cpp:995 
      

      please also see
      https://bugs.kde.org/show_bug.cgi?id=333404
      http://retrace.fedoraproject.org/faf/problems/1453645/

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            laknoll Lars Knoll
            s Schenk
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes